@@ -598,12 +598,12 @@
   FTDemo_Icon( FTDemo_Handle*   handle,
                FTDemo_Display*  display )
   {
-    FT_Vector   p[] = { { 4, 4}, { 4, 6}, { 8, 8}, { 8,56}, { 4,58},
-                        { 4,60}, {60,60}, {60,48}, {58,48}, {56,56},
-                        {44,56}, {44, 8}, {48, 6}, {48, 4}, {32, 4},
-                        {32, 6}, {36, 8}, {36,56}, {16,56}, {16,36},
+    FT_Vector   p[] = { { 4, 8}, { 4,10}, { 8,12}, { 8,52}, { 4,54},
+                        { 4,56}, {60,56}, {60,44}, {58,44}, {56,52},
+                        {44,52}, {44,12}, {48,10}, {48, 8}, {32, 8},
+                        {32,10}, {36,12}, {36,52}, {16,52}, {16,36},
                         {24,36}, {26,40}, {28,40}, {28,28}, {26,28},
-                        {24,32}, {16,32}, {16, 8}, {20, 6}, {20, 4} };
+                        {24,32}, {16,32}, {16,12}, {20,10}, {20, 8} };
     char        t[] = { 1,1,1,1,1, 1,1,1,1,1, 1,1,1,1,1,
                         1,1,1,1,1, 1,1,1,1,1, 1,1,1,1,1 };
     short       c[] = {29};
